# ion

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose-dev.yaml  docker-compose.yaml  dockerfile
migrations/2025-08-31-165009_init_db/: up.sql
public/: index.html  init.html
public/css/: alert.css  main.css
public/js/: alert.mjs  block.mjs  context.mjs  main.js  main.mjs  menu.mjs  modal.mjs  service.mjs  user.mjs
resources/: 001-init_db.sql
resources/db/init/: 001-init_db.sql  002-sample_data.sql
src/: blocks.rs  common.rs  data.rs  db.rs  error.rs  handler.rs  helper.rs  main.rs  model.rs  pages.rs  permissions.rs  roles.rs  services.rs  swagger.rs  users.rs
src/api/: init.rs  mod.rs
src/auth/: dto.rs  jwt_auth.rs  mod.rs  service.rs
src/blocks/: dto.rs  mod.rs  schema.rs  service.rs
src/pages/: dto.rs  mod.rs  schema.rs  service.rs
src/shared/: common.rs  dto.rs  mod.rs  schema.rs
src/users/: dto.rs  mod.rs  schema.rs  service.rs
