[package]
name = "ion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
mobc = "0.5"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10.0"
log = "0.4"

# async-std = { version = "1", features = ["attributes", "tokio1"] }
# warp = "0.3.1"
# serde = { version = "1.0.130", features = ["derive"] }
# tokio = { version = "1.0", features = ["macros"] }
# mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
# mobc = "0.5"
# serde_derive = "1.0"
# serde_json = "1.0"
# thiserror = "1.0"
# chrono = { version = "0.4", features = ["serde"] }