[package]
name = "ion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-files = "0.6.2"
actix-rt = "2.7.0"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15"
env_logger = "0.10.0"
log = "0.4"
derive_more ="0.99.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
