[package]
name = "ion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-files = "0.6.2"
actix-rt = "2.7.0"
actix-cors = "0.6.4"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.2.0"} # , features = ["embed_migrations"] } # Use the appropriate version
dotenv = "0.15"
env_logger = "0.10.0"
log = "0.4"
derive_more ="0.99.17"
jsonwebtoken = "7.2.0"
argon2 = "0.5.0"
rand_core = {version = "0.6.3", features = ["std"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
utoipa = {version = "3.3.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
